This is a non-exhaustive (but still near complete) changelog
for the Joomla! 1.5 Framework Unit Test Facility. See the SVN commit
log for specifics, or the Unit_Testing page on the documentation
wiki for a high-level view.

-------------------------------------------------
Legend:
# -> Bug Fix
+ -> Addition
^ -> Change
- -> Removed
> -> Moved
! -> Note

2008-08-15 Andrew Eddie
 + Added support for --group and --exclude-group options to test runnner
 + Added UserModelReset to com_user group
 + Added incomplete tests to UserModelReset

2008-08-14 Andrew Eddie
 + Added support for --testdox to test runnner
 ^ Renamed many tests to conform with phpUnit naming convention
 + Added test for UserModelReset
 ^ Changed many assert methods to Hamcrest format
 + Added ignore to Joda test when code required class not available

2008-06-22 Alan Langford
 + Added teststatus.php. A utility to evaluate how many test files have been
   created for each class.
 ^ Broke some configuration out into configure.php, to reduce duplication between
   running tests and utilities like teststatus.
 + Introduced new setup variable to allow test environment to override Joomla version.
 + Defined pattern for specifying a version range for tests. Added
   JUnit_Setup::isTestEnabled() to standardize testing.
 + Added version specifiers to JDate data set.
 - Removed the SimpleTest based JFTP tests.

2008-05-31 Anthony Ferrara
 +  Multiple fixes for the JCache tests.  Added skipping of clear test for all
 memory storage types

-------------------------------------------------
2007-12-20 Alan Langford
 !  Created branch 2007-12-17
 ^  svn:ignore now includes  .* at project root
 -  Removed test status from changelog
 -  Removed Simpletest
 +  Added PHPUnit 3.2.6
 !  Haven't dealt with resulting breakage

2007-07-27 CirTap
 ^	removed output buffering from Simpletest dumper
 +	added skip/error/exception handler + counter to custom renderer